# inferwall

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.example.yml  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  signature_request.yml
.github/workflows/: ci.yml  release.yml
crates/inferwall-core/: Cargo.toml  pyproject.toml
crates/inferwall-core/src/: lib.rs  preprocess.rs  scoring.rs  session.rs  types.rs
crates/inferwall-core/src/heuristic/: aho_corasick_engine.rs  encoding.rs  entropy.rs  mod.rs  regex_engine.rs  unicode.rs
docs/: SIGNATURE_CATALOG.md  api-reference.md  deployment.md  observability.md  policy-configuration.md  quickstart.md  siem-integration.md  signature-authoring.md
examples/: README.md  anthropic_guard.py  fastapi_middleware.py  langchain_middleware.py  openai_guard.py
scripts/: bootstrap.sh  demo.py
src/inferwall/: __init__.py
src/inferwall/api/: app.py  deps.py
src/inferwall/api/routes/: signatures.py
src/inferwall/catalog/: LICENSE-SIGNATURES
src/inferwall/catalog/agentic/: AG-001.yaml  AG-002.yaml  AG-003.yaml  AG-004.yaml  AG-005.yaml  AG-006.yaml
src/inferwall/catalog/content-safety/: CS-B-001.yaml  CS-B-002.yaml  CS-T-001.yaml  CS-T-002.yaml  CS-T-003.yaml  CS-T-004.yaml  CS-T-005.yaml  CS-T-006.yaml  CS-T-007.yaml
src/inferwall/catalog/data-leakage/: DL-P-001.yaml  DL-P-002.yaml  DL-P-003.yaml  DL-P-004.yaml  DL-P-005.yaml  DL-P-006.yaml  DL-P-007.yaml  DL-P-008.yaml  DL-P-009.yaml  DL-P-010.yaml  DL-P-011.yaml  DL-P-012.yaml  DL-S-001.yaml  DL-S-002.yaml  DL-S-003.yaml  DL-S-004.yaml  DL-S-005.yaml  DL-S-006.yaml  DL-S-007.yaml  DL-S-008.yaml  DL-S-009.yaml  DL-S-010.yaml
src/inferwall/catalog/injection/: INJ-D-001.yaml  INJ-D-002.yaml  INJ-D-003.yaml  INJ-D-004.yaml  INJ-D-005.yaml  INJ-D-006.yaml  INJ-D-007.yaml  INJ-D-008.yaml  INJ-D-009.yaml  INJ-D-010.yaml  INJ-D-011.yaml  INJ-D-012.yaml  INJ-D-013.yaml  INJ-D-014.yaml  INJ-D-015.yaml  INJ-D-016.yaml  INJ-D-017.yaml  INJ-D-018.yaml  INJ-D-019.yaml  INJ-D-020.yaml  INJ-D-021.yaml  INJ-D-022.yaml  INJ-D-023.yaml  INJ-D-024.yaml  INJ-D-025.yaml  INJ-D-026.yaml  INJ-D-027.yaml  INJ-D-028.yaml  INJ-D-029.yaml  INJ-D-030.yaml  INJ-I-001.yaml  INJ-I-002.yaml  INJ-I-003.yaml  INJ-I-004.yaml  INJ-I-005.yaml  INJ-I-006.yaml  INJ-I-007.yaml  INJ-I-008.yaml  INJ-I-009.yaml  INJ-I-010.yaml  (+27 more)
src/inferwall/catalog/system-prompt/: SP-001.yaml  SP-002.yaml  SP-003.yaml  SP-004.yaml
src/inferwall/cli/: main.py
src/inferwall/core/: audit.py  elk_shipper.py  pipeline.py  policy.py
src/inferwall/engines/: base.py  classifier.py  composite.py  heuristic.py  llm_judge.py  semantic.py
src/inferwall/models/: downloader.py  registry.py
src/inferwall/plugins/: __init__.py
src/inferwall/plugins/observability/: __init__.py  elk_shipper.py
src/inferwall/plugins/siem/: __init__.py  elk_shipper.py
src/inferwall/policies/: default.yaml  monitor-only.yaml  strict.yaml
src/inferwall/signatures/: loader.py  schema.py
tests/: conftest.py
tests/corpus/: benign_prompts.yaml
tests/integration/: test_api.py  test_api_extended.py  test_pipeline.py
tests/unit/: test_catalog.py  test_confidence_scoring.py  test_crypto_wallet_signature.py  test_elk_shipper.py  test_engine_base.py  test_false_positives.py  test_loader.py  test_models.py  test_policy.py  test_schema.py  test_scoring.py  test_semantic_engine.py  test_three_layer.py
