[project]
name = "inferwall"
version = "0.1.4"
requires-python = ">=3.10"
description = "AI application firewall — protects LLM apps against prompt injection, jailbreaks, content safety violations, and data leakage using multi-layered detection (heuristic, ML classifier, semantic similarity, LLM-judge)"
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["ai", "llm", "firewall", "security", "prompt-injection", "jailbreak", "waf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "inferwall-core>=0.1.4",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
standard = [
    "onnxruntime>=1.19",
    "tokenizers>=0.20",
    "numpy>=1.26",
    "faiss-cpu>=1.8",
]
full = [
    "inferwall[standard]",
    "llama-cpp-python>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "maturin>=1.0",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/inferwall/inferwall"
Documentation = "https://github.com/inferwall/inferwall/tree/main/docs"
Repository = "https://github.com/inferwall/inferwall"
Issues = "https://github.com/inferwall/inferwall/issues"
Changelog = "https://github.com/inferwall/inferwall/blob/main/CHANGELOG.md"

[project.scripts]
inferwall = "inferwall.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inferwall"]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["inferwall_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faiss", "llama_cpp", "onnxruntime", "tokenizers", "numpy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "integration: tests requiring compiled Rust extension",
    "security: adversarial/security tests",
]
