[package]
name = "inferwall-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust extension for InferenceWall AI application firewall"

[lib]
name = "inferwall_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
aho-corasick = "1"
unicode-normalization = "0.1"
base64 = "0.22"
arc-swap = "1"

[dev-dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }
