[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "inferwall-core"
requires-python = ">=3.10"
description = "Rust extension for InferenceWall — high-performance heuristic detection, text preprocessing, anomaly scoring, and session store"
license = { text = "Apache-2.0" }
keywords = ["ai", "llm", "firewall", "security", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
]

[tool.maturin]
features = ["pyo3/extension-module"]
